--- a/link_prediction_model_baseline.ipynb
+++ b/link_prediction_model_baseline.ipynb
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "id": "f78a3661",
    "metadata": {},
    "outputs": [
@@ -1885,24 +1885,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "K=1: Precision=0.1126, Recall=0.0098, F1=0.0180, MRR=0.1126, NDCG=0.1126\n",
       "K=5: Precision=0.0571, Recall=0.0269, F1=0.0366, MRR=0.1619, NDCG=0.0693\n",
       "K=10: Precision=0.0491, Recall=0.0510, F1=0.0501, MRR=0.1830, NDCG=0.0665\n",
       "K=20: Precision=0.0310, Recall=0.0668, F1=0.0423, MRR=0.1885, NDCG=0.0640\n",
+      "K=50: Precision=0.0181, Recall=0.0863, F1=0.0299, MRR=0.1965, NDCG=0.0707\n",
       "\n",
-      "================================================================================\n",
+      "============================================================\n",
       "RESUMO DETALHADO DAS MÉTRICAS\n",
-      "================================================================================\n",
+      "============================================================\n",
       "K     Precision  Recall     F1-Score   MRR        NDCG      \n",
-      "--------------------------------------------------------------------------------\n",
-      "5     0.0571     0.0269     0.0366     0.1619     0.0693    \n",
-      "10    0.0491     0.0510     0.0501     0.1830     0.0665    \n",
-      "20    0.0310     0.0668     0.0423     0.1885     0.0640    \n",
-      "================================================================================\n"
+      "------------------------------------------------------------\n",
+      "1     11.26      0.98       1.80       11.26      11.26     \n",
+      "5     5.71       2.69       3.66       16.19      6.93      \n",
+      "10    4.91       5.10       5.01       18.30      6.65      \n",
+      "20    3.10       6.68       4.23       18.85      6.40      \n",
+      "50    1.81       8.63       2.99       19.65      7.07      \n",
+      "============================================================\n"
      ]
     }
    ],
    "source": [
-    "K_values = [5, 10, 20]\n",
+    "K_values = [1, 5, 10, 20, 50]\n",
     "results = {}\n",
     "\n",
     "for K in K_values:\n",
@@ -1975,15 +1979,15 @@
     "        f\"NDCG={avg_ndcg:.4f}\"  # Novo output\n",
     "    )\n",
     "\n",
-    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"\\n\" + \"=\"*60)\n",
     "print(\"RESUMO DETALHADO DAS MÉTRICAS\")\n",
-    "print(\"=\"*80)\n",
+    "print(\"=\"*60)\n",
     "print(f\"{'K':<5} {'Precision':<10} {'Recall':<10} {'F1-Score':<10} {'MRR':<10} {'NDCG':<10}\")\n",
-    "print(\"-\" * 80)\n",
+    "print(\"-\" * 60)\n",
     "for K in K_values:\n",
     "    res = results[K]\n",
-    "    print(f\"{K:<5} {res['precision']:<10.4f} {res['recall']:<10.4f} {res['f1_score']:<10.4f} {res['mrr']:<10.4f} {res['ndcg']:<10.4f}\")\n",
-    "print(\"=\"*80)"
+    "    print(f\"{K:<5} {res['precision']*100:<10.2f} {res['recall']*100:<10.2f} {res['f1_score']*100:<10.2f} {res['mrr']*100:<10.2f} {res['ndcg']*100:<10.2f}\")\n",
+    "print(\"=\"*60)"
    ]
   }
  ],
