Enhance link prediction model notebook: added caching for SciBERT embeddings, improved device selection for model training, and refined author profile consolidation logic. Updated project dependencies and added new package requirements for PyTorch and related libraries.

--- a/link_prediction_model_content.ipynb
+++ b/link_prediction_model_content.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5794207a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import pickle\n",
+    "import torch\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import defaultdict, Counter\n",
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1217be7e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2f903cc2",
    "metadata": {},
    "outputs": [],
@@ -98,33 +101,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4e74db96",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ContentSciBERTRecommender(BaseRecommender):\n",
-    "    def __init__(self, model_name='allenai/scibert_scivocab_uncased'):\n",
+    "    def __init__(self, model_name='allenai/scibert_scivocab_uncased', cache_path='scibert_embeddings.pkl'):\n",
     "        super().__init__(\"Content-Based (SciBERT)\")\n",
     "        self.model_name = model_name\n",
+    "        self.cache_path = cache_path\n",
     "        self.encoder = None\n",
-    "        self.author_embeddings = {} # {author_id: vector}\n",
+    "        self.author_embeddings = {} \n",
     "        self.knn_model = None\n",
-    "        self.author_ids_index = [] # Para mapear índice do KNN -> author_id\n",
+    "        self.author_ids_index = []\n",
+    "        \n",
+    "        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "        print(f\"[{self.name}] Device selecionado: {self.device.upper()}\")\n",
     "        \n",
     "    def fit(self, train_df):\n",
-    "        print(f\"[{self.name}] Carregando SciBERT e gerando embeddings...\")\n",
-    "        self.encoder = SentenceTransformer(self.model_name)\n",
+    "        work_id_to_emb = self._load_embeddings()\n",
     "        \n",
     "        unique_works = train_df[['work_id', 'title', 'abstract']].drop_duplicates()\n",
-    "        unique_works['text'] = unique_works['title'] + \". \" + unique_works['abstract'].fillna('')\n",
     "        \n",
-    "        work_embeddings = self.encoder.encode(unique_works['text'].tolist(), show_progress_bar=True)\n",
-    "        \n",
-    "        work_id_to_emb = {wid: emb for wid, emb in zip(unique_works['work_id'], work_embeddings)}\n",
-    "        \n",
-    "        # O perfil do autor será a média dos vetores de seus trabalhos\n",
-    "        print(f\"[{self.name}] Criando perfis de autores...\")\n",
+    "        if work_id_to_emb is None:\n",
+    "            print(f\"[{self.name}] Gerando embeddings na {self.device.upper()}...\")\n",
+    "            self.encoder = SentenceTransformer(self.model_name, device=self.device)\n",
+    "            \n",
+    "            unique_works['text'] = unique_works['title'] + \". \" + unique_works['abstract'].fillna('')\n",
+    "            \n",
+    "            work_embeddings = self.encoder.encode(\n",
+    "                unique_works['text'].tolist(), \n",
+    "                batch_size=32, \n",
+    "                show_progress_bar=True,\n",
+    "                device=self.device\n",
+    "            )\n",
+    "            \n",
+    "            work_id_to_emb = {wid: emb for wid, emb in zip(unique_works['work_id'], work_embeddings)}\n",
+    "            self._save_embeddings(work_id_to_emb)\n",
+    "        else:\n",
+    "            print(f\"[{self.name}] Embeddings carregados do cache.\")\n",
+    "\n",
+    "        print(f\"[{self.name}] Consolidadando perfis de autores...\")\n",
     "        \n",
     "        author_groups = train_df.groupby('author_id')['work_id'].apply(list)\n",
     "        \n",
@@ -140,20 +158,19 @@
     "                self.author_ids_index.append(author_id)\n",
     "        \n",
     "        self.author_embeddings = np.array(author_vectors)\n",
+    "        \n",
+    "        # O KNN do scikit-learn roda em CPU, mas é muito rápido para vetores já prontos\n",
     "        self.knn_model = NearestNeighbors(n_neighbors=50, metric='cosine', n_jobs=-1)\n",
     "        self.knn_model.fit(self.author_embeddings)\n",
-    "        print(f\"[{self.name}] Treinamento concluído. {len(self.author_ids_index)} perfis criados.\")\n",
+    "        print(f\"[{self.name}] Treino finalizado. {len(self.author_ids_index)} perfis.\")\n",
     "\n",
     "    def recommend(self, author_id, top_n=10):\n",
     "        try:\n",
     "            author_idx = self.author_ids_index.index(author_id)\n",
     "        except ValueError:\n",
-    "            # TODO: Retornar autores populares\n",
     "            return []\n",
     "            \n",
     "        author_vector = self.author_embeddings[author_idx].reshape(1, -1)\n",
-    "        \n",
-    "        # Buscamos top_n + 1 porque o mais próximo é sempre ele mesmo\n",
     "        distances, indices = self.knn_model.kneighbors(author_vector, n_neighbors=top_n+1)\n",
     "        \n",
     "        recommendations = []\n",
@@ -162,12 +179,22 @@
     "            if rec_author != author_id:\n",
     "                recommendations.append(rec_author)\n",
     "                \n",
-    "        return recommendations[:top_n]"
+    "        return recommendations[:top_n]\n",
+    "\n",
+    "    def _save_embeddings(self, data):\n",
+    "        with open(self.cache_path, 'wb') as f:\n",
+    "            pickle.dump(data, f)\n",
+    "\n",
+    "    def _load_embeddings(self):\n",
+    "        if os.path.exists(self.cache_path):\n",
+    "            with open(self.cache_path, 'rb') as f:\n",
+    "                return pickle.load(f)\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "48103f27",
    "metadata": {},
    "outputs": [],
@@ -211,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1d01cf12",
    "metadata": {},
    "outputs": [],
@@ -266,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d1b084bc",
    "metadata": {},
    "outputs": [
@@ -274,39 +301,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[Content-Based (SciBERT)] Device selecionado: CUDA\n",
       "[Topology (Graph Coauthor)] Construindo grafo...\n",
       "[Topology (Graph Coauthor)] Grafo construído com 5320 autores.\n",
-      "\n",
-      "Avaliando modelo: Topology (Graph Coauthor)...\n",
-      "  K=5: Precision=0.0606, Recall=0.0295, F1=0.0397\n",
-      "  K=10: Precision=0.0426, Recall=0.0419, F1=0.0422\n",
-      "  K=20: Precision=0.0290, Recall=0.0583, F1=0.0387\n",
-      "  K=50: Precision=0.0177, Recall=0.0835, F1=0.0292\n"
-     ]
-    }
-   ],
-   "source": [
-    "topo_model = TopologyRecommender()\n",
-    "\n",
-    "models = [topo_model]\n",
-    "\n",
-    "for model in models:\n",
-    "    model.fit(train_df) \n",
-    "    \n",
-    "metrics = evaluate_models(models, test_ground_truth, train_graph, K_values=[5, 10, 20, 50])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e59c0539",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Content-Based (SciBERT)] Carregando SciBERT e gerando embeddings...\n"
+      "[Content-Based (SciBERT)] Gerando embeddings na CUDA...\n"
      ]
     },
     {
@@ -319,7 +317,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7012b2b750341aca310de3fe27594e9",
+       "model_id": "5ff7b71d51ef4d7d94dd847735121a9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,15 +335,15 @@
       "BertModel LOAD REPORT from: allenai/scibert_scivocab_uncased\n",
       "Key                                        | Status     |  | \n",
       "-------------------------------------------+------------+--+-\n",
-      "cls.seq_relationship.bias                  | UNEXPECTED |  | \n",
-      "cls.predictions.transform.dense.weight     | UNEXPECTED |  | \n",
-      "cls.predictions.transform.LayerNorm.bias   | UNEXPECTED |  | \n",
       "cls.predictions.decoder.bias               | UNEXPECTED |  | \n",
+      "cls.predictions.decoder.weight             | UNEXPECTED |  | \n",
+      "cls.predictions.transform.LayerNorm.bias   | UNEXPECTED |  | \n",
+      "cls.seq_relationship.bias                  | UNEXPECTED |  | \n",
+      "cls.seq_relationship.weight                | UNEXPECTED |  | \n",
       "cls.predictions.bias                       | UNEXPECTED |  | \n",
       "cls.predictions.transform.LayerNorm.weight | UNEXPECTED |  | \n",
+      "cls.predictions.transform.dense.weight     | UNEXPECTED |  | \n",
       "cls.predictions.transform.dense.bias       | UNEXPECTED |  | \n",
-      "cls.seq_relationship.weight                | UNEXPECTED |  | \n",
-      "cls.predictions.decoder.weight             | UNEXPECTED |  | \n",
       "\n",
       "Notes:\n",
       "- UNEXPECTED\t:can be ignored when loading from different task/architecture; not ok if you expect identical arch.\n",
@@ -355,7 +353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4839c293555409e8749f6d351471d9f",
+       "model_id": "59a30eb788744d368aada8035c87ef05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,8 +368,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Content-Based (SciBERT)] Criando perfis de autores...\n",
-      "[Content-Based (SciBERT)] Treinamento concluído. 5320 perfis criados.\n",
+      "[Content-Based (SciBERT)] Consolidadando perfis de autores...\n",
+      "[Content-Based (SciBERT)] Treino finalizado. 5320 perfis.\n",
+      "\n",
+      "Avaliando modelo: Topology (Graph Coauthor)...\n",
+      "  K=5: Precision=0.0593, Recall=0.0286, F1=0.0386\n",
+      "  K=10: Precision=0.0414, Recall=0.0411, F1=0.0413\n",
+      "  K=20: Precision=0.0287, Recall=0.0580, F1=0.0384\n",
+      "  K=50: Precision=0.0177, Recall=0.0836, F1=0.0293\n",
       "\n",
       "Avaliando modelo: Content-Based (SciBERT)...\n",
       "  K=5: Precision=0.0070, Recall=0.0060, F1=0.0065\n",
@@ -382,9 +386,10 @@
     }
    ],
    "source": [
+    "topo_model = TopologyRecommender()\n",
     "content_model = ContentSciBERTRecommender(model_name='allenai/scibert_scivocab_uncased')\n",
     "\n",
-    "models = [content_model]\n",
+    "models = [topo_model, content_model]\n",
     "\n",
     "for model in models:\n",
     "    model.fit(train_df) \n",
