Reset execution counts in link prediction notebooks, improved handling of mixed data types during CSV loading, and refined dataset splitting for training, testing, and evaluation. Enhanced output messages for evaluation metrics to provide clearer insights. Removed outdated comments to improve code clarity and maintainability.

--- a/link_prediction_model_hybrid_instituition.ipynb
+++ b/link_prediction_model_hybrid_instituition.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1d01cf12",
    "metadata": {},
    "outputs": [
@@ -387,13 +387,16 @@
     "merged_df = merged_df[merged_df['language'] == 'en']\n",
     "\n",
     "unique_works = merged_df[['work_id', 'publication_date']].drop_duplicates().sort_values('publication_date')\n",
-    "split_idx = int(len(unique_works) * 0.8)\n",
+    "split_train_idx = int(len(unique_works) * 0.6)\n",
+    "split_test_idx = int(len(unique_works) * 0.8)\n",
     "\n",
-    "train_work_ids = set(unique_works.iloc[:split_idx]['work_id'])\n",
-    "test_work_ids = set(unique_works.iloc[split_idx:]['work_id'])\n",
+    "train_work_ids = set(unique_works.iloc[:split_train_idx]['work_id'])\n",
+    "test_work_ids = set(unique_works.iloc[split_train_idx:split_test_idx]['work_id'])\n",
+    "eval_work_ids = set(unique_works.iloc[split_test_idx:]['work_id'])\n",
     "\n",
     "train_df = merged_df[merged_df['work_id'].isin(train_work_ids)].copy()\n",
     "test_df = merged_df[merged_df['work_id'].isin(test_work_ids)].copy()\n",
+    "eval_df = merged_df[merged_df['work_id'].isin(eval_work_ids)].copy()\n",
     "\n",
     "def build_graph(df):\n",
     "    graph = defaultdict(set)\n",
