Refine link prediction model notebook: reset execution counts for code cells, adjusted recommendation logic to use a search limit for valid recommendations, and updated evaluation metrics to include additional K values. Improved output messages for clarity and enhanced code maintainability by removing outdated comments.

--- a/link_prediction_model_hybrid_filter.ipynb
+++ b/link_prediction_model_hybrid_filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "5794207a",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "1217be7e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "2f903cc2",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "4e74db96",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "a4a0b612",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "48103f27",
    "metadata": {},
    "outputs": [],
@@ -320,34 +320,42 @@
     "def evaluate_models(models, test_ground_truth, train_graph_check, K_values=[5, 10]):\n",
     "    results = {}\n",
     "    \n",
+    "    max_k_eval = max(K_values)\n",
+    "    search_limit = max_k_eval \n",
+    "    \n",
     "    for model in models:\n",
     "        print(f\"\\nAvaliando modelo: {model.name}...\")\n",
     "        model_metrics = {k: {'precision': [], 'recall': [], 'ndcg': [], 'mrr': []} for k in K_values}\n",
     "        \n",
     "        for author_id, actual_new_coauthors in test_ground_truth.items():\n",
-    "            max_k = max(K_values)\n",
-    "            recs = model.recommend(author_id, top_n=max_k)\n",
+    "            # Ambos os modelos recebem o limite estrito (ex: 50)\n",
+    "            recs = model.recommend(author_id, top_n=search_limit)\n",
     "            \n",
+    "            # FILTRAGEM\n",
     "            past_coauthors = train_graph_check.get(author_id, set())\n",
-    "            recs = [r for r in recs if r not in past_coauthors]\n",
+    "            valid_recs = [r for r in recs if r not in past_coauthors]\n",
     "            \n",
     "            for k in K_values:\n",
-    "                top_k_recs = recs[:k]\n",
+    "                # Se a lista ficou menor que K (ex: pediu 50, 5 eram velhos, sobrou 45),\n",
+    "                # avaliamos os 45. Como isso acontece igual para o Híbrido e Topologia,\n",
+    "                # as métricas globais serão idênticas.\n",
+    "                top_k_recs = valid_recs[:k]\n",
+    "                \n",
     "                hits = len(set(top_k_recs) & actual_new_coauthors)\n",
     "                \n",
+    "                # Métricas\n",
     "                p = hits / k if k > 0 else 0\n",
     "                r = hits / len(actual_new_coauthors) if len(actual_new_coauthors) > 0 else 0\n",
     "                ndcg = calculate_ndcg(top_k_recs, actual_new_coauthors, k)\n",
-    "                mrr = calculate_mrr_at_k(recs, actual_new_coauthors, k)\n",
+    "                mrr = calculate_mrr_at_k(valid_recs, actual_new_coauthors, k)\n",
     "                \n",
     "                model_metrics[k]['precision'].append(p)\n",
     "                model_metrics[k]['recall'].append(r)\n",
     "                model_metrics[k]['ndcg'].append(ndcg)\n",
     "                model_metrics[k]['mrr'].append(mrr)\n",
     "        \n",
-    "        # Média final\n",
+    "        # Consolidação\n",
     "        results[model.name] = {}\n",
-    "        \n",
     "        for k in K_values:\n",
     "            avg_p = np.mean(model_metrics[k]['precision'])\n",
     "            avg_r = np.mean(model_metrics[k]['recall'])\n",
@@ -363,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "aefd7f78",
    "metadata": {},
    "outputs": [],
@@ -419,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "1d01cf12",
    "metadata": {},
    "outputs": [
@@ -427,7 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\BSBCo\\AppData\\Local\\Temp\\ipykernel_4160\\1540647326.py:3: DtypeWarning: Columns (0: is_retracted) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\BSBCo\\AppData\\Local\\Temp\\ipykernel_7692\\1540647326.py:3: DtypeWarning: Columns (0: is_retracted) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  works_df = pd.read_csv(f'{database_path}/works.csv')\n"
      ]
     }
@@ -484,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "d1b084bc",
    "metadata": {},
    "outputs": [
@@ -500,10 +508,10 @@
       "[Content-Based (SciBERT)] Treino finalizado. 25262 perfis.\n",
       "\n",
       "Avaliando modelo: Topology (Graph Coauthor)...\n",
-      "  K=5: Precision=0.0164, Recall=0.0125, F1=0.0142, NDCG=0.0192, MRR@k=0.0371\n",
-      "  K=10: Precision=0.0153, Recall=0.0220, F1=0.0181, NDCG=0.0219, MRR@k=0.0438\n",
-      "  K=20: Precision=0.0158, Recall=0.0431, F1=0.0231, NDCG=0.0298, MRR@k=0.0525\n",
-      "  K=50: Precision=0.0111, Recall=0.0696, F1=0.0191, NDCG=0.0382, MRR@k=0.0579\n",
+      "  K=5: Precision=0.0165, Recall=0.0127, F1=0.0144, NDCG=0.0194, MRR@k=0.0371\n",
+      "  K=10: Precision=0.0149, Recall=0.0220, F1=0.0178, NDCG=0.0218, MRR@k=0.0437\n",
+      "  K=20: Precision=0.0156, Recall=0.0433, F1=0.0229, NDCG=0.0299, MRR@k=0.0525\n",
+      "  K=50: Precision=0.0111, Recall=0.0706, F1=0.0191, NDCG=0.0387, MRR@k=0.0579\n",
       "\n",
       "Avaliando modelo: Content-Based (SciBERT)...\n",
       "  K=5: Precision=0.0057, Recall=0.0034, F1=0.0043, NDCG=0.0067, MRR@k=0.0125\n",
@@ -512,10 +520,10 @@
       "  K=50: Precision=0.0023, Recall=0.0119, F1=0.0038, NDCG=0.0080, MRR@k=0.0152\n",
       "\n",
       "Avaliando modelo: Hybrid (Topo Filter + Content Rank)...\n",
-      "  K=5: Precision=0.0170, Recall=0.0119, F1=0.0140, NDCG=0.0186, MRR@k=0.0347\n",
-      "  K=10: Precision=0.0161, Recall=0.0219, F1=0.0185, NDCG=0.0217, MRR@k=0.0416\n",
-      "  K=20: Precision=0.0160, Recall=0.0434, F1=0.0234, NDCG=0.0294, MRR@k=0.0503\n",
-      "  K=50: Precision=0.0111, Recall=0.0696, F1=0.0191, NDCG=0.0377, MRR@k=0.0557\n"
+      "  K=5: Precision=0.0167, Recall=0.0124, F1=0.0142, NDCG=0.0185, MRR@k=0.0348\n",
+      "  K=10: Precision=0.0159, Recall=0.0221, F1=0.0185, NDCG=0.0217, MRR@k=0.0419\n",
+      "  K=20: Precision=0.0161, Recall=0.0443, F1=0.0236, NDCG=0.0298, MRR@k=0.0507\n",
+      "  K=50: Precision=0.0111, Recall=0.0706, F1=0.0191, NDCG=0.0380, MRR@k=0.0560\n"
      ]
     }
    ],
