Update link prediction model notebook: modified execution counts, added print statements for clarity during co-author graph construction, and enhanced dataset creation to include common co-authors. Improved output messages for better understanding of processing steps and results.

--- a/link_prediction_model_topology_randomforest.ipynb
+++ b/link_prediction_model_topology_randomforest.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "4b046ddd",
    "metadata": {},
    "outputs": [
@@ -222,14 +222,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Construindo dicionário de contagem de coautorias...\n"
+      "Construindo dicionário de contagem de coautorias...\n",
+      "Construindo grafo de coautores...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processando trabalhos: 100%|██████████| 19916/19916 [00:03<00:00, 5039.00it/s]\n"
+      "Processando trabalhos: 100%|██████████| 19916/19916 [00:03<00:00, 6045.58it/s]\n"
      ]
     },
     {
@@ -238,14 +239,14 @@
      "text": [
       "Total de pares que são coautores: 217,493\n",
       "\n",
-      "Criando dataset com pares de coautores...\n"
+      "Criando dataset com pares de coautores e calculando autores em comum...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processando pares: 100%|██████████| 217493/217493 [00:00<00:00, 1434678.57it/s]\n"
+      "Processando pares: 100%|██████████| 217493/217493 [00:01<00:00, 216307.88it/s]\n"
      ]
     },
     {
@@ -280,6 +281,7 @@
        "      <th>author_a</th>\n",
        "      <th>author_b</th>\n",
        "      <th>count_coauthors</th>\n",
+       "      <th>common_coauthors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -288,60 +290,70 @@
        "      <td>https://openalex.org/A5076219710</td>\n",
        "      <td>https://openalex.org/A5103241656</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>https://openalex.org/A5035579644</td>\n",
        "      <td>https://openalex.org/A5103241656</td>\n",
        "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>https://openalex.org/A5069881493</td>\n",
        "      <td>https://openalex.org/A5103241656</td>\n",
        "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>https://openalex.org/A5006873642</td>\n",
        "      <td>https://openalex.org/A5103241656</td>\n",
        "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>https://openalex.org/A5103241656</td>\n",
        "      <td>https://openalex.org/A5110165399</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>https://openalex.org/A5035579644</td>\n",
        "      <td>https://openalex.org/A5076219710</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>https://openalex.org/A5069881493</td>\n",
        "      <td>https://openalex.org/A5076219710</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>https://openalex.org/A5006873642</td>\n",
        "      <td>https://openalex.org/A5076219710</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>https://openalex.org/A5076219710</td>\n",
        "      <td>https://openalex.org/A5110165399</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>https://openalex.org/A5035579644</td>\n",
        "      <td>https://openalex.org/A5069881493</td>\n",
        "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -360,17 +372,17 @@
        "8  https://openalex.org/A5076219710  https://openalex.org/A5110165399   \n",
        "9  https://openalex.org/A5035579644  https://openalex.org/A5069881493   \n",
        "\n",
-       "   count_coauthors  \n",
-       "0                1  \n",
-       "1                2  \n",
-       "2                2  \n",
-       "3                2  \n",
-       "4                1  \n",
-       "5                1  \n",
-       "6                1  \n",
-       "7                1  \n",
-       "8                1  \n",
-       "9                3  "
+       "   count_coauthors  common_coauthors  \n",
+       "0                1                 4  \n",
+       "1                2                 6  \n",
+       "2                2                 6  \n",
+       "3                2                 6  \n",
+       "4                1                 4  \n",
+       "5                1                 4  \n",
+       "6                1                 4  \n",
+       "7                1                 4  \n",
+       "8                1                 4  \n",
+       "9                3                 8  "
       ]
      },
      "metadata": {},
@@ -379,10 +391,14 @@
    ],
    "source": [
     "# Criação do dataset apenas com pares que são coautores\n",
-    "# Dataset terá: author_a, author_b, count_coauthors, are_coauthors\n",
+    "# Dataset terá: author_a, author_b, count_coauthors, common_coauthors\n",
     "\n",
     "print(\"Construindo dicionário de contagem de coautorias...\")\n",
     "coauthor_count = {}\n",
+    "\n",
+    "# Construir grafo de coautores para calcular autores em comum\n",
+    "print(\"Construindo grafo de coautores...\")\n",
+    "coauthor_graph = defaultdict(set)\n",
     "\n",
     "for work_id, group in tqdm(train_df.groupby(\"work_id\"), desc=\"Processando trabalhos\"):\n",
     "    authors = group[\"author_id\"].tolist()\n",
@@ -392,17 +408,32 @@
     "            # Usar min/max ao invés de sorted (mais rápido)\n",
     "            pair = (min(a, b), max(a, b))\n",
     "            coauthor_count[pair] = coauthor_count.get(pair, 0) + 1\n",
+    "            # Construir grafo bidirecional\n",
+    "            coauthor_graph[a].add(b)\n",
+    "            coauthor_graph[b].add(a)\n",
     "\n",
     "print(f\"Total de pares que são coautores: {len(coauthor_count):,}\")\n",
     "\n",
     "# Criar dataset apenas com pares que são coautores\n",
-    "print(\"\\nCriando dataset com pares de coautores...\")\n",
+    "print(\"\\nCriando dataset com pares de coautores e calculando autores em comum...\")\n",
     "rows = []\n",
     "\n",
     "for (author_a, author_b), count in tqdm(\n",
     "    coauthor_count.items(), desc=\"Processando pares\"\n",
     "):\n",
-    "    rows.append({\"author_a\": author_a, \"author_b\": author_b, \"count_coauthors\": count})\n",
+    "    # Calcular quantidade de autores em comum\n",
+    "    coauthors_a = coauthor_graph.get(author_a, set())\n",
+    "    coauthors_b = coauthor_graph.get(author_b, set())\n",
+    "    # Interseção: autores que são coautores de ambos (excluindo o próprio par)\n",
+    "    common_coauthors = (coauthors_a & coauthors_b) - {author_a, author_b}\n",
+    "    common_count = len(common_coauthors)\n",
+    "    \n",
+    "    rows.append({\n",
+    "        \"author_a\": author_a, \n",
+    "        \"author_b\": author_b, \n",
+    "        \"count_coauthors\": count,\n",
+    "        \"common_coauthors\": common_count\n",
+    "    })\n",
     "\n",
     "dataset_df = pd.DataFrame(rows)\n",
     "print(f\"\\nDataset criado! Total de linhas: {len(dataset_df):,}\")\n",
