Update link prediction model notebooks: reset execution counts in multiple notebooks for consistency, added new hybrid random forest model notebook, and included new output images for analysis. Enhanced comments and output clarity during processing steps.

--- a/link_prediction_model_topology_common_coauthors.ipynb
+++ b/link_prediction_model_topology_common_coauthors.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "6cd1af55",
    "metadata": {},
    "outputs": [],
@@ -170,13 +170,13 @@
     "        self.train_df = train_df\n",
     "        print(f\"[{self.name}] Construindo grafo...\")\n",
     "        \n",
-    "        # Construção do Grafo (CORRIGIDO: Agora bidirecional)\n",
+    "        # Construção do Grafo\n",
     "        for _, group in train_df.groupby('work_id'):\n",
     "            authors = group['author_id'].tolist()\n",
     "            if len(authors) > 1:\n",
     "                for u, v in itertools.combinations(authors, 2):\n",
     "                    self.graph[u].add(v)\n",
-    "                    self.graph[v].add(u)  # <--- Apenas esta linha foi adicionada\n",
+    "                    self.graph[v].add(u)\n",
     "        \n",
     "        # Cálculo de Popularidade (para fallback)\n",
     "        popularity_counter = Counter()\n",
